update to be library based

--- a/{{cookiecutter.project_slug}}/CMakeLists.txt
+++ b/{{cookiecutter.project_slug}}/CMakeLists.txt
@@ -1,37 +1,54 @@
-cmake_minimum_required(VERSION 3.18)
+cmake_minimum_required(VERSION 3.14)
+
+set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
+set(CMAKE_INCLUDE_CURRENT_DIR ON)
+set(CMAKE_CXX_STANDARD 23)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
-set(CMAKE_CXX_FLAGS "${CMAKE_C_FLAGS} -std=c++23 -lstdc++")
-option(BUILD_DOCS "Build and Install Documents (Requires Doxygen)") 
 
-# Initialize
-set(REPOSITORY_NAME {{cookiecutter.project_slug}})
+set(CMAKE_CXX_FLAGS "-Wall -Wextra")
+set(CMAKE_CXX_FLAGS_DEBUG "-g")
+set(CMAKE_CXX_FLAGS_RELEASE "-O3")
 
-# Set project
 project(
-  $(REPOSITORY_NAME)
-  VERSION 0.0.0
-  LANGUAGES CXX
+    {{cookiecutter.project_slug}}
+    VERSION 0.0.0
+    DESCRIPTION "{{cookiecutter.project_description}}"
+    LANGUAGES CXX
 )
 
-add_executable(App src/main.cpp)
+include(cmake/project-is-top-level.cmake)
 
-# Compile the library and application
-add_subdirectory(src)
-add_subdirectory(app)
-
-# compile the tests
-include(CTest)
-if(BUILD_TESTING)
-  add_subdirectory(tests)
+if (NOT CMAKE_BUILD_TYPE AND NOT CMAKE_CONFIGURATION_TYPES)
+  set(CMAKE_BUILD_TYPE Release CACHE STRING "Choose the type of build." FORCE)
+  set_property(CACHE CMAKE_BUILD_TYPE PROPERTY STRINGS "Debug" "Release" "MinSizeRel" "RelWithDebInfo")
 endif()
 
-# Compilation options
-set(BUILD_DOCS ON CACHE BOOL "Enable building of documentation")
-if(BUILD_DOCS)
-  # Add the documentation
-  add_subdirectory(docs)
+# ---- Declare library ----
+
+add_library(
+    {{cookiecutter.project_slug}}
+    src/main.cpp
+)
+target_include_directories(
+  {{cookiecutter.project_slug}} ${warning_guard}
+    PUBLIC
+    "\$<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}/src>"
+)
+
+# ---- Include cmake libraries here ----
+# (Recommended to store in cmake/third_party)
+
+# ---- Examples ----
+
+option(BUILD_EXAMPLES "Build examples tree." ON)
+if(BUILD_EXAMPLES)
+  add_subdirectory(example)
 endif()
 
-# This prints a summary of found dependencies
-include(FeatureSummary)
-feature_summary(WHAT ALL)
+# ---- Developer mode ----
+
+if(NOT {{cookiecutter.project_slug.upper()}}_DEVELOPER_MODE)
+  return()
+endif()
+
+include(cmake/dev-mode.cmake)
