--- a/{{cookiecutter.project_slug}}/.vscode/settings.json
+++ b/{{cookiecutter.project_slug}}/.vscode/settings.json
@@ -1,13 +1,9 @@
 {
-    "editor.formatOnSave": true,
     "debug.inlineValues": "on",
+    "editor.formatOnSave": true,
     "git.autofetch": true,
-    "C_Cpp.intelliSenseEngine": "disabled",
-    "C_Cpp.default.includePath": [
-        "${workspaceFolder}]/**"
-    ],
-    "cmake.configureSettings": {
-        "CMAKE_TOOLCHAIN_FILE": "/opt/vcpkg/scripts/buildsystems/vcpkg.cmake"
-    },
-    "sonarlint.pathToCompileCommands": "${workspaceFolder}/target/debug/compile_commands.json"
+
+    "C_Cpp.default.compilerPath": "/usr/bin/clang++",
+    "C_Cpp.default.configurationProvider": "ms-vscode.cmake-tools",
+    "sonarlint.pathToCompileCommands": "${workspaceFolder}/build/compile_commands.json"
 }
