--- a/{{cookiecutter.project_slug}}/CMakeLists.txt
+++ b/{{cookiecutter.project_slug}}/CMakeLists.txt
@@ -5,9 +5,15 @@ set(CMAKE_INCLUDE_CURRENT_DIR ON)
 set(CMAKE_CXX_STANDARD 23)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-set(CMAKE_CXX_FLAGS "-Wall -Wextra")
-set(CMAKE_CXX_FLAGS_DEBUG "-g")
-set(CMAKE_CXX_FLAGS_RELEASE "-O3")
+# ---- Declare CMake Environments ----
+
+include (cmake/environment.cmake)
+
+# ---- Declare VCPKG Environment ----
+
+include(cmake/3rdparty/vcpkg.cmake)
+
+# ---- Declare project ----
 
 project(
     {{cookiecutter.project_slug}}
@@ -18,25 +24,26 @@ project(
 
 include(cmake/project-is-top-level.cmake)
 
-if (NOT CMAKE_BUILD_TYPE AND NOT CMAKE_CONFIGURATION_TYPES)
-  set(CMAKE_BUILD_TYPE Release CACHE STRING "Choose the type of build." FORCE)
-  set_property(CACHE CMAKE_BUILD_TYPE PROPERTY STRINGS "Debug" "Release" "MinSizeRel" "RelWithDebInfo")
-endif()
-
 # ---- Declare library ----
+
+set(SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/src/{{cookiecutter.project_slug}})
+set(THIRD_PARTY_DIR ${CMAKE_CURRENT_SOURCE_DIR}/3rdparty)
 
 add_library(
     {{cookiecutter.project_slug}}
-    src/main.cpp
+    STATIC
+    ${SOURCE_DIR}/addition.cpp  
 )
 target_include_directories(
   {{cookiecutter.project_slug}} ${warning_guard}
-    PUBLIC
-    "\$<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}/src>"
+  PUBLIC
+  "\$<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}/include>"
+  PRIVATE
+  "\$<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}/src>"
 )
 
 # ---- Include cmake libraries here ----
-# (Recommended to store in cmake/third_party)
+include(cmake/3rdparty/fmt.cmake)
 
 # ---- Examples ----
 
