--- a/{{cookiecutter.project_slug}}/.vscode/settings.json
+++ b/{{cookiecutter.project_slug}}/.vscode/settings.json
@@ -1,9 +1,27 @@
 {
-    "debug.inlineValues": "on",
-    "editor.formatOnSave": true,
-    "git.autofetch": true,
+  "debug.inlineValues": "on",
+  "editor.formatOnSave": true,
+  "git.autofetch": true,
 
-    "C_Cpp.default.compilerPath": "/usr/bin/clang++",
-    "C_Cpp.default.configurationProvider": "ms-vscode.cmake-tools",
-    "sonarlint.pathToCompileCommands": "${workspaceFolder}/build/compile_commands.json"
+  "editor.rulers": [140],
+
+  "C_Cpp.default.cppStandard": "c++23",
+  "C_Cpp.default.compilerPath": "/usr/bin/clang",
+  "C_Cpp.default.configurationProvider": "ms-vscode.cmake-tools",
+  "C_Cpp.formatting": "clangFormat",
+
+  "sonarlint.pathToCompileCommands": "${workspaceFolder}/build/compile_commands.json",
+
+  "editor.tabSize": 4,
+  "editor.insertSpaces": true,
+  "[yaml]": {
+    "editor.tabSize": 2,
+    "editor.insertSpaces": true
+  },
+  "[json]": {
+    "editor.tabSize": 2,
+    "editor.insertSpaces": true
+  },
+  "prettier.tabWidth": 2,
+  "cmake.configureOnOpen": false
 }
