--- a/{{cookiecutter.project_slug}}/.vscode/tasks.json
+++ b/{{cookiecutter.project_slug}}/.vscode/tasks.json
@@ -1,18 +1,29 @@
 {
-    "version": "2.0.0",
-    "tasks": [
-      {
-        "label": "build",
-        "type": "shell",
-        "command": "/usr/bin/make",
-        "args": ["build_and_install_debug"],
-        "group": {
-          "kind": "build",
-          "isDefault": true
-        },
-        "problemMatcher": ["$gcc"],
-        "detail": "Generated task by Debugger."
-      }
-    ]
-  }
-  
+  "version": "2.0.0",
+  "tasks": [
+    {
+      "label": "build",
+      "type": "shell",
+      "command": "/usr/bin/make",
+      "args": ["build_debug"],
+      "group": {
+        "kind": "build",
+        "isDefault": true
+      },
+      "problemMatcher": ["$gcc"],
+      "detail": "Generated task by Debugger."
+    },
+    {
+      "label": "build_release",
+      "type": "shell",
+      "command": "/usr/bin/make",
+      "args": ["build_release"],
+      "group": {
+        "kind": "build",
+        "isDefault": true
+      },
+      "problemMatcher": ["$gcc"],
+      "detail": "Generated task by Debugger."
+    }
+  ]
+}
