--- a/{{cookiecutter.project_slug}}/.vscode/tasks.json
+++ b/{{cookiecutter.project_slug}}/.vscode/tasks.json
@@ -28,7 +28,7 @@
     {
       "label": "windows_build_debug",
       "type": "shell",
-      "command": "vcpkg install --x-feature=test,dev && cmake -S . -B target/build -D CMAKE_BUILD_TYPE=Debug -D ENABLE_COVERAGE=ON -D DEVELOPER_MODE=ON -D BUILD_TESTS=ON -D ENABLE_SIMD=ON && cmake --build target/build --config Debug -j 16 && cmake --install target/build"
+      "command": "vcpkg install --x-feature=test --x-feature=dev && cmake -S . -B target/build -D CMAKE_BUILD_TYPE=Debug -D ENABLE_COVERAGE=ON -D DEVELOPER_MODE=ON -D BUILD_TESTS=ON -D ENABLE_SIMD=ON && cmake --build target/build --config Debug -j 16 && cmake --install target/build"
     }
   ]
 }
