--- a/{{cookiecutter.project_slug}}/Makefile
+++ b/{{cookiecutter.project_slug}}/Makefile
@@ -2,35 +2,47 @@ depends:
 	vcpkg integrate install
 	vcpkg install
 
-build_debug:
-	cmake -S . -B build \
-		-D CMAKE_BUILD_TYPE=Debug \
-		-D BUILD_MCSS_DOCS=OFF \
-		-D BUILD_TESTING=ON \
-		-D ENABLE_COVERAGE=ON \
-		-D {{cookiecutter.project_slug.upper()}}_DEVELOPER_MODE=ON
-	cmake --build build --config Debug
-	cmake --install build
-
 build_release:
-	cmake -S . -B release -D CMAKE_BUILD_TYPE=Release
-	cmake --build release --config Release
-	cmake --install release
+	cmake -S . -B target/release -D CMAKE_BUILD_TYPE=Release
+	cmake --build target/release --config Release
+	cmake --install target/release
 
-run_example:
-	./build/example/example/empty_example
+build_debug:
+	cmake -S . -B target/build \
+		-D CMAKE_BUILD_TYPE=Debug \
+		-D BUILD_DOCS=OFF \
+		-D BUILD_TESTS=ON \
+		-D ENABLE_COVERAGE=ON \
+		-D DEVELOPER_MODE=ON \
+		-D ENABLE_SIMD=ON
+
+	cmake --build target/build --config Debug -j 16
+	cmake --install target/build
+
+build_debug_cicd:
+	cmake -S . -B target/build \
+		-D CMAKE_BUILD_TYPE=Debug \
+		-D BUILD_DOCS=OFF \
+		-D BUILD_TESTS=ON \
+		-D ENABLE_COVERAGE=ON \
+		-D DEVELOPER_MODE=ON \
+		-D ENABLE_SIMD=OFF
+
+	cmake --build target/build --config Debug -j 16
+	cmake --install target/build
 
 run_tests:
-	cd build && ctest --output-on-failure -j16 && cd ..
+	cd target/build && ctest --output-on-failure -j16 && cd ..
 
 run_docs:
 	cmake -S . -B build \
 		-D CMAKE_BUILD_TYPE=Debug \
-		-D BUILD_MCSS_DOCS=ON \
-		-D BUILD_TESTING=ON \
-		-D ENABLE_COVERAGE=ON \
-		-D {{cookiecutter.project_slug.upper()}}_DEVELOPER_MODE=ON
-	cmake --build build --config Debug
-	cmake --install build
-	doxygen build/docs/Doxyfile
-	python3 -m http.server 8000 --directory build/docs/html
+		-D BUILD_DOCS=ON \
+		-D BUILD_TESTS=OFF \
+		-D ENABLE_COVERAGE=OFF \
+		-D DEVELOPER_MODE=ON \
+        -D ENABLE_SIMD=OFF
+	cmake --build target/build --config Debug
+	cmake --install target/build
+	doxygen target/build/docs/Doxyfile
+	python3 -m http.server 8000 --directory target/build/docs/html
